[package]
name = "livemod-derive"
description = "Derive macro for livemod"
repository = "https://github.com/TheOnlyMrCat/LiveMod"
categories = ["development-tools::debugging", "game-development"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
