[package]
name = "livemod-gui"
description = "Graphical user interface for livemod"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/TheOnlyMrCat/LiveMod"
categories = ["development-tools::debugging", "game-development"]
license = "MIT OR Apache-2.0"
version = "0.4.0"
edition = "2018"

[dependencies]
egui = "0.13"
egui_glium = "0.13"
glium = "0.30"
base64 = "0.13"
nanoserde = "0.1"
livemod = { path = "../livemod-lib", version = "0.4" }