[package]
name = "livemod"
description = "Unity-like runtime modification of variables"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/TheOnlyMrCat/LiveMod"
categories = ["development-tools::debugging", "game-development"]
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2018"

[features]
derive = ["livemod-derive"]
disabled = []

[dependencies]
parking_lot = "0.11"
nanoserde = "0.1"
base64 = "0.13"

livemod-derive = { path = "../livemod-derive", version = "0.3", optional = true }